# LuxonServer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTORS  Doxyfile  README.md  config.example.yml  ffi_filter.sh  settings_database.md  test_client.cpp
WASMImpl/C/: Makefile.common  Makefile.djgpp  Makefile.generic  main.c  sockets.c  wasi.c
WASMImpl/Java/src/main/java/com/gitlab/luxon_project/: LuxonServer.java
bindings/python/: luxon_server.py  luxon_server_ffi.py
ffi_include/: luxon_server_ffi.h  luxon_server_ffi_exports.inc  luxon_server_ffi_imports.inc
include/luxon/server/: apps.hpp  command_restarter.hpp  game.hpp  handler_base.hpp  handler_gameserver.hpp  handler_masterserver.hpp  hookpoints.hpp  http_server.hpp  ipc.hpp  ipc_codes.hpp  lobby.hpp  peer.hpp  peer_persistence.hpp  pfr_codec.hpp  pfr_pack.hpp  server_manager.hpp
src/: apps.cpp  authentication.cpp  command_restarter.cpp  ffi.cpp  game.cpp  handler_base.cpp  handler_gameserver.cpp  handler_masterserver.cpp  handler_nameserver.cpp  http_server.cpp  ipc.cpp  lobby.cpp  lobby_vt.cpp  main.cpp  peer.cpp  peer_persistence.cpp  platform.cpp  platform.hpp  server_manager.cpp  settings_manager.cpp
